# enfilera

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.pt-BR.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
backups/: .gitkeep
config/: config.example.toml  enfilera.env.example
data/: .gitkeep
docs/: DEPLOY.md  PLAN.md
src/enfilera/: __init__.py  __main__.py  admin_commands.py  admin_guard.py  admin_messages.py  app.py  backup.py  backups.py  bot.py  bot_config.py  closure_handlers.py  closures.py  closures_store.py  config_loader.py  config_parsing.py  db.py  entrypoint.py  error_handler.py  estimate.py  estimate_service.py  estimation_config.py  flood_guard.py  geofence.py  halt_flag.py  halt_handlers.py  info_handlers.py  (+21 more)
tests/: conftest.py  schedules.py  telegram_fakes.py  test_admin_commands.py  test_admin_guard.py  test_admin_messages.py  test_app.py  test_backup.py  test_backups.py  test_bot.py  test_bot_config.py  test_closure_handlers.py  test_closures.py  test_closures_store.py  test_config_loader.py  test_config_parsing.py  test_db.py  test_entrypoint.py  test_error_handler.py  test_estimate.py  test_estimate_service.py  test_estimation_config.py  test_flood_guard.py  test_geofence.py  test_halt_flag.py  test_halt_handlers.py  test_info_handlers.py  test_json_logging.py  test_line_handlers.py  test_lines.py  test_main.py  test_messages.py  test_metrics_handlers.py  test_openness.py  test_openness_service.py  test_preferences_store.py  test_prune.py  test_pruning.py  test_rate_limit.py  test_robust.py  (+10 more)
